Convert to images
Image source from https://blog.ag-grid.com/implementing-infinite-loading-in-an-angular-store-application/

--- a/src/app/posts/view-posts/view-posts.component.html
+++ b/src/app/posts/view-posts/view-posts.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="(loading$ | async) === false">
   <ul>
     <li *ngFor="let p of posts$ | async">
-      {{p.title}}
+      {{p.name}}
+      <img [src]="p.image">
     </li>
   </ul>
 </div>
