--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Count is {{count$ | async}}</h1>
 <button (click)="onClick()">Click Me</button>
 
+<button (click)="onClickPage()">Fetch Next</button>
 <app-view-posts></app-view-posts>
