--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<h1>Count is {{count$ | async}}</h1>
-<button (click)="onClick()">Click Me</button>
-
-<button (click)="onClickPage()">Fetch Next</button>
+<h1>Photo Browser</h1>
 <app-view-posts></app-view-posts>
