--- a/src/app/posts/view-posts/view-posts.component.html
+++ b/src/app/posts/view-posts/view-posts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <cdk-virtual-scroll-viewport #scrollerElement itemSize="25" class="content">
     <div class="responsive-grid">
-      <ng-container *cdkVirtualFor="let item of posts$ | async; let idx=index">
+      <ng-container *cdkVirtualFor="let item of photos; let idx=index">
         <div class="myimage">
           <div class="id">{{idx}}</div>
           <img [src]="item.src.small">
