--- a/src/app/posts/view-posts/view-posts.component.scss
+++ b/src/app/posts/view-posts/view-posts.component.scss
@@ -28,11 +28,11 @@ p {
 }
 
 .myimage {
-  // position: relative;
+  position: relative;
 
   img {
-    width: 75%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
   }
 
   .id {
@@ -41,4 +41,21 @@ p {
     margin: $gap;
     font-size: 1.5rem;
   }
+}
+
+.responsive-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+  gap: 16px;
+}
+
+virtual-scroller {
+  width: 100%;
+  height: 600px;
+}
+
+.item {
+  display: block;
+  width: 100%;
+  // height: 100px;
 }
