Expose search term input on page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>Photo Browser</h1>
+<h1>Images from the Aether</h1>
+<form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+  <label>Search string
+    <input type="text" required formControlName="searchString" >
+  </label>
+  <button type="submit" [disabled]="!searchForm.valid">Submit</button>
+</form>
 <app-view-posts></app-view-posts>
