naming: ViewPostsComponent to ViewPhotosComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
   <input type="text" required formControlName="searchString" id="searchString">
   <button type="submit" [disabled]="!searchForm.valid">Submit</button>
 </form>
-<app-view-posts></app-view-posts>
+<app-view-photos></app-view-photos>
