--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -16,4 +16,10 @@
   <div class="spinner-item" id="endFlag" *ngIf="endOfInputReached">
     <img src="https://cdn.pixabay.com/photo/2013/06/17/10/28/end-139848__480.jpg" height="50px" width="100px">
   </div>
+
+  <button (click)="showModal=true">Open Modal</button>
+
+  <app-modal [visible]="showModal" (closeModal)="closeModal()" >
+    hello, world
+  </app-modal>
 </div>
