Wire up modal with real data
- remove test button
- trigger open upon selecting any image
- display selected photo in the modal

--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -2,7 +2,7 @@
   <virtual-scroller #scroll [items]="photos" (vsEnd)="fetchMore($event)"
     [enableUnequalChildrenSizes]="true">
     <div #container class="responsive-grid">
-      <div class="item" *ngFor="let item of scroll.viewPortItems">
+      <div class="item" (click)="showDetail(item)" *ngFor="let item of scroll.viewPortItems">
         <div class="myimage">
           <div class="id" title="Item ID {{item.id}}">{{item.refIndex}}</div>
           <img [src]="item.src.small">
@@ -17,9 +17,7 @@
     <img src="https://cdn.pixabay.com/photo/2013/06/17/10/28/end-139848__480.jpg" height="50px" width="100px">
   </div>
 
-  <button (click)="showModal=true">Open Modal</button>
-
   <app-modal [visible]="showModal" (closeModal)="closeModal()" >
-    hello, world
+    <img [src]="currentPhoto?.src.medium">
   </app-modal>
 </div>
