--- a/src/app/viewer/modal/modal.component.scss
+++ b/src/app/viewer/modal/modal.component.scss
@@ -9,11 +9,11 @@
   .modal {
     z-index: 1000; // on top of everything
     position: fixed;
-    // TODO: CENTER IT!
-    top: 30px;
-    // bottom: 0;
-    left: 300px;
-    // width: 500px;
+    // center it; refererence https://www.w3.org/Style/Examples/007/center.en.html#viewport3
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 
     .modal-body {
         background: #fff;
