--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -5,7 +5,7 @@
       <div class="item" (click)="showDetail(item)" *ngFor="let item of scroll.viewPortItems">
         <div class="myimage">
           <div class="id" title="Item ID {{item.id}}">{{item.refIndex}}</div>
-          <img [src]="item.src.small">
+          <img [src]="item.src.medium">
         </div>
       </div>
     </div>
@@ -18,6 +18,6 @@
   </div>
 
   <app-modal [visible]="showModal" (closeModal)="closeModal()" >
-    <img [src]="currentPhoto?.src.medium">
+    <img [src]="currentPhoto?.src.large">
   </app-modal>
 </div>
