Add author rending in modal

--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -18,6 +18,7 @@
   </div>
 
   <app-modal2 [openEvent]="openUserModal">
+    <div id="author">{{currentPhoto?.photographer}}</div>
     <img [src]="currentPhoto?.src.large">
   </app-modal2>
 </div>
