--- a/src/app/viewer/view-photos/view-photos.component.scss
+++ b/src/app/viewer/view-photos/view-photos.component.scss
@@ -1,9 +1,5 @@
 $gap: 16px;
 
-p {
-  font-family: Lato;
-}
-
 .container {
   margin-left: $gap;
   margin-right: $gap;
@@ -30,6 +26,7 @@ p {
         img {
           width: 100%;
           height: 100%;
+          border-radius: 5px;
         }
 
         .id {
@@ -48,7 +45,12 @@ p {
     margin-top: 10px;
   }
 
-  img {
-    max-width: 100%;
+  app-modal2 {
+    img {
+      max-width: 100%;
+      // match the curvature of the container at the bottom;
+      // author name is above the photo so not matching curvature at top.
+      border-radius: 0 0 10px 10px;
+    }
   }
 }
