--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Images from the Aether</h1>
 <form [formGroup]="searchForm">
   <label for="searchString">Search string</label>
-  <input type="text" (keyup)="handleKeyup()" required formControlName="searchString" id="searchString">
+  <input type="text" (keyup)="handleKeyup($event)" required formControlName="searchString" id="searchString">
 </form>
 <app-view-photos></app-view-photos>
