Add images (and tests) for "no results"

--- a/src/app/viewer/view-photos/view-photos.component.scss
+++ b/src/app/viewer/view-photos/view-photos.component.scss
@@ -45,6 +45,15 @@ $gap: 16px;
     margin-top: 10px;
   }
 
+  .notice {
+    position: fixed;
+    height: 80%;
+    top: 60%; // a bit lower than center; leave room for search box above it
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+  }
+
   app-modal2 {
     img {
       max-width: 100%;
