--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -25,7 +25,7 @@
       src="assets/treasure-clipart-empty.jpeg" >
   </div>
 
-  <app-modal2 [openEvent]="openUserModal">
+  <app-modal2 [visibility]="detailModalVisibility">
     <a href="{{currentPhoto?.photographer_url}}" target="_blank">
       <div id="author">{{currentPhoto?.photographer}}</div>
     </a>
