--- a/src/app/viewer/view-photos/view-photos.component.scss
+++ b/src/app/viewer/view-photos/view-photos.component.scss
@@ -54,7 +54,7 @@ $gap: 16px;
     transform: translate(-50%, -50%);
   }
 
-  app-modal2 {
+  app-base-modal {
     img {
       max-width: 100%;
       // match the curvature of the container at the bottom;
