--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,12 @@
+@import "src/styles/_variables";
+
+h1 {
+  font-family: Palatino, sans-serif;
+  margin: 0.5em $standard-margin;
+}
+
 form {
-  margin-bottom: 1em;
+  margin: 0.5em $standard-margin;
 }
 
 .ng-valid[required], .ng-valid.required  {
@@ -8,10 +15,6 @@ form {
 
 .ng-invalid:not(form).ng-dirty  {
   border-left: 8px solid #a94442;
-}
-
-h1 {
-  font-family: Palatino, sans-serif;
 }
 
 input {
