More interesting headline font

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "src/styles/_variables";
 
 h1 {
-  font-family: Palatino, sans-serif;
+  font-family: Luminari, "Bradley Hand", Palatino, sans-serif;
   margin: 0.5em $standard-margin;
 }
 
