--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -29,6 +29,6 @@
     <a href="{{currentPhoto?.photographer_url}}" target="_blank">
       <div id="author">{{currentPhoto?.photographer}}</div>
     </a>
-    <img [src]="currentPhoto?.src.large">
+    <img [src]="currentPhoto?.src?.large">
   </app-base-modal>
 </div>
