--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -10,17 +10,17 @@
       </div>
     </div>
   </virtual-scroller>
-  <div class="spinner-item" *ngIf="loading">
+  <div class="spinner-item" *ngIf="fetchStatus">
     <mat-spinner [diameter]="50"></mat-spinner>
   </div>
   <div class="spinner-item" id="endFlag" *ngIf="endOfInputReached && photos.length !== 0">
     <img src="https://cdn.pixabay.com/photo/2013/06/17/10/28/end-139848__480.jpg" height="50px" width="100px">
   </div>
-  <div class="notice" *ngIf="!loading && photos.length === 0 && searchString.length > 0">
+  <div class="notice" *ngIf="!fetchStatus && photos.length === 0 && searchString.length > 0">
     <img id="noResultsFound" height="80%" width="80%"
       src="assets/graphics/set-empty-picture-frames-with-free-space-inside-isolated-white_76080-5386.jpeg" >
   </div>
-  <div class="notice" *ngIf="!loading && photos.length === 0 && searchString.length === 0">
+  <div class="notice" *ngIf="!fetchStatus && photos.length === 0 && searchString.length === 0">
     <img id="noSearchPerformed" height="80%"
       src="assets/graphics/treasure-clipart-empty.jpeg" >
   </div>
