Add logic and image for unauthorized

--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -19,12 +19,17 @@
     <img src="https://cdn.pixabay.com/photo/2013/06/17/10/28/end-139848__480.jpg" height="50px" width="100px">
   </div>
   <div class="notice"
-    *ngIf="fetchStatus !== ExecutionState.Loading && photos.length === 0 && searchString.length > 0">
+    *ngIf="fetchStatus === ExecutionState.Success && photos.length === 0 && searchString.length > 0">
     <img id="noResultsFound" height="80%" width="80%"
       src="assets/graphics/set-empty-picture-frames-with-free-space-inside-isolated-white_76080-5386.jpeg" >
   </div>
+   <div class="notice"
+    *ngIf="fetchStatus === ExecutionState.Failure">
+    <img id="unauthorized" height="80%" width="80%"
+      src="assets/graphics/unauthorized.png" >
+  </div>
   <div class="notice"
-    *ngIf="fetchStatus !== ExecutionState.Loading && photos.length === 0 && searchString.length === 0">
+    *ngIf="fetchStatus === ExecutionState.Uninitialized && photos.length === 0 && searchString.length === 0">
     <img id="noSearchPerformed" height="80%"
       src="assets/graphics/treasure-clipart-empty.jpeg" >
   </div>
