--- a/src/app/viewer/view-photos/view-photos.component.scss
+++ b/src/app/viewer/view-photos/view-photos.component.scss
@@ -53,6 +53,10 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+
+    .notice-note {
+      margin: 0 20vw;
+    }
   }
 
   app-base-modal {
