--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -28,7 +28,7 @@
     <img id="unauthorized" height="80%" width="80%"
       src="assets/graphics/unauthorized.png" >
       <div class="notice-note">
-        (Go to Dev Tools >> Application >> Local Storage in your browser and delete the stored key, then reload the page)
+        (Select the key at upper right to re-enter your API key)
       </div>
   </div>
   <div class="notice"
