--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,14 @@ input {
   max-width: 90%;
 }
 
+.apikey {
+  position: absolute;
+  top: 3vh;
+  right: 3vw;
+  text-align: right;
+  cursor: pointer;
+}
+
 .control-bar {
   display: inline-flex;
   align-items: center;
