Handle empty HTTP response
There is technically no HTTP status code 0,
but it might occur for incomplete or empty responses,
so need to handle it.

--- a/src/app/viewer/view-photos/view-photos.component.html
+++ b/src/app/viewer/view-photos/view-photos.component.html
@@ -48,7 +48,7 @@
     <div class="notice-note">
       (If you really want to know, the HTTP response was
       <br>
-      [ {{ (apiResponse$ | async)?.statusCode }} {{ getReasonPhrase((apiResponse$ | async)?.statusCode || 0) }} ] {{ (apiResponse$ | async)?.statusMsg }})
+      {{ formatErrorInfo() }} )
     </div>
 </div>
 
