--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,56 @@
-<h1>Images from the Aether</h1>
-<div class="apikey"
-  (click)="setVisibility(true)"
-  title="Set or test API key">
-  <mat-icon>vpn_key</mat-icon>
-</div>
-<div class="app-control-bar">
-  <form [formGroup]="searchForm">
-    <label for="searchString">Search string</label>
-    <input type="text" (keyup)="handleKeyup($event)" required formControlName="searchString" id="searchString">
-  </form>
-  <span>Total: <span id="total">{{total$ | async}}</span></span>
-</div>
-<app-view-photos></app-view-photos>
-<app-base-modal [visibility]="keyModalVisibility">
-  <div>
-    Welcome! There is just one bit of setup before you can explore images galore.
-    This site leverages the extensive Pexels photo library but, as such,
-    you need a key from them (it is free!) to access it.
-    Just go to https://www.pexels.com/join/, then come back here and enter your key.
+<header role="banner">
+  <h1>Images from the Aether</h1>
+  <div tabindex="3" class="apikey"
+    (click)="setVisibility(true)"
+    title="Set or test API key">
+    <mat-icon>vpn_key</mat-icon>
   </div>
-  <!--
-    This is a safe use of an ElementRef (#myKey) -- strictly local use here in the template.
-    See https://ultimatecourses.com/blog/element-refs-in-angular-templates for details.
-  -->
-  <div class="modal-control-bar">
-    <label for="key" class="visually-hidden">Key</label>
-    <input id="key" ngModel #myKey>
-    <button
-      [disabled]="!myKey.value.trim() || (testStatus$ | async) === ExecutionState.Loading"
-      (click)="testKey(myKey.value.trim())">
-      <div id="button-label">
-        Test
-        <mat-spinner [diameter]="20"
-          *ngIf="(testStatus$ | async) === ExecutionState.Loading"
-        ></mat-spinner>
-        <!-- See https://fonts.google.com/icons for icon index -->
-        <mat-icon color="warn"
-          *ngIf="(testStatus$ | async) === ExecutionState.Failure"
-          title="key is NOT valid -- check it and try again"
-        >error</mat-icon>
-        <mat-icon color="primary"
-          *ngIf="(testStatus$ | async) === ExecutionState.Success"
-          title="key is valid!"
-          >verified</mat-icon>
-      </div>
-    </button>
-    <button [disabled]="!myKey.value.trim()" (click)="saveKey(myKey.value.trim())">Save My Key</button>
+</header>
+<main role="main">
+  <div class="app-control-bar">
+    <form [formGroup]="searchForm">
+      <label for="searchString">Search string</label>
+      <input tabindex="1" type="text" (keyup)="handleKeyup($event)" required formControlName="searchString" id="searchString">
+    </form>
+    <span>Total: <span id="total">{{total$ | async}}</span></span>
   </div>
-</app-base-modal>
+  <app-view-photos tabindex="2"></app-view-photos>
+  <app-base-modal [visibility]="keyModalVisibility">
+    <div>
+      Welcome! There is just one bit of setup before you can explore images galore.
+      This site leverages the extensive Pexels photo library but, as such,
+      you need a key from them (it is free!) to access it.
+      Just go to https://www.pexels.com/join/, then come back here and enter your key.
+    </div>
+    <!--
+      This is a safe use of an ElementRef (#myKey) -- strictly local use here in the template.
+      See https://ultimatecourses.com/blog/element-refs-in-angular-templates for details.
+    -->
+    <div class="modal-control-bar">
+      <label for="key" class="visually-hidden">Key</label>
+      <form [formGroup]="keyForm">
+        <input id="key" formControlName="key" ngModel required #myKey>
+      </form>
+      <button
+        [disabled]="!myKey.value.trim() || (testStatus$ | async) === ExecutionState.Loading"
+        (click)="testKey(myKey.value.trim())">
+        <div id="button-label">
+          Test
+          <mat-spinner [diameter]="20"
+            *ngIf="(testStatus$ | async) === ExecutionState.Loading"
+          ></mat-spinner>
+          <!-- See https://fonts.google.com/icons for icon index -->
+          <mat-icon color="warn"
+            *ngIf="(testStatus$ | async) === ExecutionState.Failure"
+            title="key is NOT valid -- check it and try again"
+          >error</mat-icon>
+          <mat-icon color="primary"
+            *ngIf="(testStatus$ | async) === ExecutionState.Success"
+            title="key is valid!"
+            >verified</mat-icon>
+        </div>
+      </button>
+      <button [disabled]="!myKey.value.trim()" (click)="saveKey(myKey.value.trim())">Save My Key</button>
+    </div>
+  </app-base-modal>
+</main>
