Remove deprecated construct
Use of ngModel and formControlName together has been deprecated
(see https://angular.io/api/forms/FormControlName#use-with-ngmodel-is-deprecated)
... but it turns out the ngModel is not needed here.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     <div class="modal-control-bar">
       <label for="key" class="visually-hidden">Key</label>
       <form [formGroup]="keyForm">
-        <input id="key" formControlName="key" ngModel required #myKey>
+        <input id="key" formControlName="key" required #myKey>
       </form>
       <button
         [disabled]="!myKey.value.trim() || (testStatus$ | async) === ExecutionState.Loading"
